--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
       <div class="flex flex-1 mt-2.5 items-center justify-center sm:items-stretch sm:justify-start">
         <div class="flex flex-shrink-0 items-center">
           <%= link_to root_path do %>
-            <%= image_tag "logowhite", class: "h-12" %>
+            <%= image_tag "logowhite.png", class: "h-12" %>
           <% end %>
         </div>
         <div class="hidden sm:ml-6 sm:block">
