--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,8 +5,22 @@
       <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <p><strong>Email:</strong><span class="ml-80"><%= @user.email %></span></p>
       </div>
+
+      <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex">
+        <p>
+          <strong>Roles:</strong>
+          <span class="ml-80">
+            <% @user.roles.each_with_index do |role, index| %>
+              <p style="color: gray;"><%= role.name %> <%= @user.roles.size > index + 1 ? "|" : "" %>&nbsp;</p>
+            <% end %>
+          </span>
+        </p>
+      </div>
     </div>
 
-    <%= link_to 'Back to users', users_path, class: "ml-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+    <div class="inline flex justify-between">
+      <%= button_to "Destroy this user", user_path(@user), method: :delete, data: { turbo_confirm: 'Are you sure?' }, class: "ml-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-5 rounded" %>
+      <%= link_to 'Back to users', users_path, class: "ml-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-5 rounded" %>
+    </div>
   </div>
 </div>
