--- a/app/views/daily_sales_report/show.html.erb
+++ b/app/views/daily_sales_report/show.html.erb
@@ -19,30 +19,30 @@
         </tr>
       </thead>
       <tbody class="divide-y divide-gray-200 bg-white">
-        <tr>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">Vanilla</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">98</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">32</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">66</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$600</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$300</td>
-        </tr>
-        <tr>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">Chocolate</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">120</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">55</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">65</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$985</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$493</td>
-        </tr>
+        <% total_starting_inventory = 0 %>
+        <% grand_total_sales = 0 %>
+        <% total_end_of_day_inventory = 0 %>
+        <% @sales_data.each do |store_name, flavors| %>
+          <% flavors.each do |flavor_name, data| %>
+            <tr>
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= flavor_name %></td>
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:starting_inventory] %></td>
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:total_sales] %></td>
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:end_of_day_inventory] %></td>
+            </tr>
+            <% total_starting_inventory = total_starting_inventory + data[:starting_inventory].to_i %>
+            <% grand_total_sales = grand_total_sales + data[:total_sales].to_i %>
+            <% total_end_of_day_inventory = total_end_of_day_inventory + data[:end_of_day_inventory].to_i %>
+          <% end %>
+        <% end %>
       </tbody>
         <tr class="font-bold">
           <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">Total</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">218</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">87</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">131</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$1585</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$793</td>
+          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= total_starting_inventory %></td>
+          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= grand_total_sales %></td>
+          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= total_end_of_day_inventory %></td>
+          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$0</td>
+          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$0</td>
         </tr>
       <tfoot>
       </tfoot>
@@ -50,93 +50,47 @@
   </div>
 
   <div class="border p-4 my-2">
-    <h2 class="text-xl font-bold mb-4">Kingston</h2>
-
-    <table class="min-w-full divide-y divide-gray-300">
-      <thead class="bg-gray-50">
-        <tr>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Flavors</th>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Starting Inventory</th>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Total Sales</th>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">EoD Inventory</th>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Revenue</th>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Profit</th>
-        </tr>
-      </thead>
-      <tbody class="divide-y divide-gray-200 bg-white">
-        <tr>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">Vanilla</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">40</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">16</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6 bg-red-200">24</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$300</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$150</td>
-        </tr>
-        <tr>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">Chocolate</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">60</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">30</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">30</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$537</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$268</td>
-        </tr>
-      </tbody>
-        <tr class="font-bold">
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">Total</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">100</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">46</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">54</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$837</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$419</td>
-        </tr>
-      <tfoot>
-      </tfoot>
-    </table>
-  </div>
-
-  <div class="border p-4 my-2">
-    <h2 class="text-xl font-bold mb-4">Marshfield</h2>
-
-    <table class="min-w-full divide-y divide-gray-300">
-      <thead class="bg-gray-50">
-        <tr>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Flavors</th>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Starting Inventory</th>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Total Sales</th>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">EoD Inventory</th>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Revenue</th>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Profit</th>
-        </tr>
-      </thead>
-      <tbody class="divide-y divide-gray-200 bg-white">
-        <tr>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">Vanilla</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">58</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">16</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">42</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$300</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$150</td>
-        </tr>
-        <tr>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">Chocolate</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">60</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">25</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">35</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$448</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$224</td>
-        </tr>
-      </tbody>
-        <tr class="font-bold">
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">Total Sales</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">118</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">41</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">77</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$748</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$374</td>
-        </tr>
-      <tfoot>
-      </tfoot>
-    </table>
+    <% @sales_data.each do |store_name, flavors| %>
+      <h2 class="text-xl font-bold mb-4"><%= store_name %></h2>
+      <table class="min-w-full divide-y divide-gray-300">
+        <thead class="bg-gray-50">
+          <tr>
+            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Flavors</th>
+            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Starting Inventory</th>
+            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Total Sales</th>
+            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">EoD Inventory</th>
+            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Revenue</th>
+            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Profit</th>
+          </tr>
+        </thead>
+        <tbody class="divide-y divide-gray-200 bg-white">
+          <% total_starting_inventory = 0 %>
+          <% grand_total_sales = 0 %>
+          <% total_end_of_day_inventory = 0 %>
+          <% flavors.each do |flavor_name, data| %>
+            <tr>
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= flavor_name %></td>
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:starting_inventory] %></td>
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:total_sales] %></td>
+              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:end_of_day_inventory] %></td>
+            </tr>
+            <% total_starting_inventory = total_starting_inventory + data[:starting_inventory].to_i %>
+            <% grand_total_sales = grand_total_sales + data[:total_sales].to_i %>
+            <% total_end_of_day_inventory = total_end_of_day_inventory + data[:end_of_day_inventory].to_i %>
+          <% end %>
+        </tbody>
+        <tfoot>
+          <tr class="font-bold">
+            <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">Total</td>
+            <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= total_starting_inventory %></td>
+            <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= grand_total_sales %></td>
+            <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= total_end_of_day_inventory %></td>
+            <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$0</td>
+            <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$0</td>
+          </tr>
+        </tfoot>
+      </table>
+    <% end %>
   </div>
 
   <% Inventory.all.each do |inventory| %>
