--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -100,7 +100,7 @@
             </div>
 
             <div class="group">
-              <%= link_to "Sales Report", sales_report_path(date: Date.today), data: { action: 'click->nav-bar#activeLink' },
+              <%= link_to "Sales Report", sales_report_path(start_date: Date.today, end_date: Date.today), data: { action: 'click->nav-bar#activeLink' },
                 class: "nav-link group-[.active-link]:bg-gray-900 text-gray-300 group-[.active-link]:text-white hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
             </div>
 
