--- a/app/views/sales_reports/show.html.erb
+++ b/app/views/sales_reports/show.html.erb
@@ -58,6 +58,8 @@
                 <td class="border px-4 text-center py-2"><%= data[:sales_sum] %></td>
                 <td class="border px-4 text-center py-2"><%= data[:productions_sum] %></td>
                 <td class="border px-4 text-center py-2"><%= data[:transfers_sum] %></td>
+                <td class="border px-4 text-center py-2"><%= data[:revenue] %></td>
+                <td class="border px-4 text-center py-2"><%= data[:profit] %></td>
               </tr>
             <% end %>
           <% end %>
