--- a/app/views/flavors/edit.html.erb
+++ b/app/views/flavors/edit.html.erb
@@ -27,6 +27,16 @@
         <%= form.check_box :archived, checked: @flavor.archived.presence || false, class: " ml-4 mt-1 block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2" %>
       </div>
 
+      <div class="my-5">
+        <%= form.label :price %>
+        <%= form.number_field :price, required: true, min: 0, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+      </div>
+
+      <div class="my-5">
+        <%= form.label :unict_cost %>
+        <%= form.number_field :unict_cost, required: true, min: 0, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+      </div>
+
       <div class="inline">
         <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer", data: { turbo_frame: '_top' } %>
       </div>
