--- a/app/views/flavors/show.html.erb
+++ b/app/views/flavors/show.html.erb
@@ -16,7 +16,7 @@
       </div>
 
       <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-        <p><strong>Unit Cost:</strong><span class="ml-[290px]"><%= @flavor.unict_cost %></span></p>
+        <p><strong>Unit Cost:</strong><span class="ml-[290px]"><%= @flavor.unit_cost %></span></p>
       </div>
 
       <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex">
