--- a/app/views/flavors/edit.html.erb
+++ b/app/views/flavors/edit.html.erb
@@ -33,8 +33,8 @@
       </div>
 
       <div class="my-5">
-        <%= form.label :unict_cost %>
-        <%= form.number_field :unict_cost, required: true, min: 0, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+        <%= form.label :unit_cost %>
+        <%= form.number_field :unit_cost, required: true, min: 0, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
       </div>
 
       <div class="inline">
