--- a/app/views/flavors/index.html.erb
+++ b/app/views/flavors/index.html.erb
@@ -28,7 +28,7 @@
                     <td> <%= flavor.name %> </td>
                     <td> <%= flavor.archived ? 'Yes' : 'No' %> </td>
                     <td> <%= flavor.price %> </td>
-                    <td> <%= flavor.unict_cost %> </td>
+                    <td> <%= flavor.unit_cost %> </td>
                     <td>
                       <ul class="list-disc">
                         <% flavor.locations.select{ |location| location.type == 'Store' }.each do |store_location| %>
