Improvments for the daily reports page to update data on date selection

--- a/app/views/daily_sales_report/show.html.erb
+++ b/app/views/daily_sales_report/show.html.erb
@@ -1,93 +1,3 @@
-<div class="">
-  <div class="sm:flex-auto flex justify-between items-center">
-    <h1 class="text-2xl font-bold mb-4">Daily Sales Report</h1>
-    <input type="date" value="<%= Date.today %>" />
-  </div>
-
-  <div class="border p-4 my-2">
-    <h2 class="text-xl font-bold mb-4">All Stores</h2>
-
-    <table class="min-w-full divide-y divide-gray-300">
-      <thead class="bg-gray-50">
-        <tr>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Flavors</th>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Starting Inventory</th>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Total Sales</th>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">EoD Inventory</th>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Revenue</th>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Profit</th>
-        </tr>
-      </thead>
-      <tbody class="divide-y divide-gray-200 bg-white">
-        <% @sales_data[:stores].each do |store_name, flavors| %>
-          <% flavors.each do |flavor_name, data| %>
-            <tr>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= flavor_name %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:starting_inventory] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:total_sale] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:end_of_day_inventory] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:revenue] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:profit] %></td>
-            </tr>
-          <% end %>
-        <% end %>
-      </tbody>
-        <tr class="font-bold">
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">Total</td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= @sales_data[:total][:starting_inventory] %></td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= @sales_data[:total][:total_sales] %></td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= @sales_data[:total][:end_of_day_inventory] %></td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$<%= @sales_data[:total][:revenue] %></td>
-          <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$<%= @sales_data[:total][:profit] %></td>
-        </tr>
-      <tfoot>
-      </tfoot>
-    </table>
-  </div>
-
-  <div class="border p-4 my-2">
-    <% @sales_data[:stores].each do |store_name, flavors| %>
-      <h2 class="text-xl font-bold mb-4"><%= store_name %></h2>
-      <table class="min-w-full divide-y divide-gray-300">
-        <thead class="bg-gray-50">
-          <tr>
-            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Flavors</th>
-            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Starting Inventory</th>
-            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Total Sales</th>
-            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">EoD Inventory</th>
-            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Revenue</th>
-            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Profit</th>
-          </tr>
-        </thead>
-        <tbody class="divide-y divide-gray-200 bg-white">
-          <% flavors.each do |flavor_name, data| %>
-            <tr>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= flavor_name %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:starting_inventory] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:total_sale] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:end_of_day_inventory] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:revenue] %></td>
-              <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= data[:profit] %></td>
-            </tr>
-          <% end %>
-        </tbody>
-        <tfoot>
-          <tr class="font-bold">
-            <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">Total</td>
-            <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= @sales_data["#{store_name}_totals"][:starting_inventory] %></td>
-            <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= @sales_data["#{store_name}_totals"][:total_sale] %></td>
-            <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6"><%= @sales_data["#{store_name}_totals"][:end_of_day_inventory] %></td>
-            <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$<%= @sales_data["#{store_name}_totals"][:revenue] %></td>
-            <td class="py-3.5 pl-4 pr-3 text-left text-sm sm:pl-6">$<%= @sales_data["#{store_name}_totals"][:profit] %></td>
-          </tr>
-        </tfoot>
-      </table>
-    <% end %>
-  </div>
-
-  <% Inventory.all.each do |inventory| %>
-    <div class="border p-4 my-2">
-      <h2 class="text-xl font-bold mb-4"><%= inventory.name %></h2>
-    </div>
-  <% end %>
-</div>
+<%= turbo_frame_tag "daily-sales-report" do %>
+  <%= render "sales_report" %>
+<% end %>
