--- a/app/views/sales_reports/show.html.erb
+++ b/app/views/sales_reports/show.html.erb
@@ -1,7 +1,12 @@
+<% if flash[:alert].present? %>
+  <div class="text-red-500">
+    <%= flash[:alert] %>
+  </div>
+<% end %>
 <div class="p-6">
   <div class="flex justify-between">
     <h1 class="text-2xl font-semibold mt-4">Sales Report</h1>
-    <%= link_to 'View Daily', daily_sales_report_path(date: Date.today), class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+    <%= link_to 'View Daily', daily_sales_report_path(date: Date.today), class: "text-blue-600 underline font-medium cursor-pointer" %>
   </div>
 
   <div class="bg-white mt-5 p-3 shadow rounded">
@@ -9,7 +14,7 @@
       <div class="grid grid-cols-5 gap-4 mb-4">
         <div class="flex items-center bg-gray-200 p-1 shadow rounded">
           <%= form.label :start_date, 'Start Date ', class: "mr-2" %>
-          <%= form.date_field :start_date, value: @start_date %>
+          <%= form.date_field :start_date, required: true, value: @start_date %>
         </div>
 
         <div class="flex items-center bg-gray-200 p-1 shadow rounded">
@@ -28,7 +33,7 @@
         </div>
 
         <div class="flex items-center p-1">
-          <%= form.submit 'Generate Report', name: 'view', class: "rounded-lg py-2.5 px-2 border border-gray-500 text-gray-500 block font-medium" %>
+          <%= form.submit 'Generate Report', name: 'view', data: { turbo_frame: '_top' }, class: "rounded-lg py-2.5 px-2 border border-gray-500 bg-blue-600 text-white block font-medium" %>
           <%= form.submit 'Export CSV', name: 'export-csv', data: { turbo: false }, class: "rounded-lg py-2.5 px-2 ml-5 border border-gray-500 text-gray-500 block font-medium" %>
         </div>
       </div>
