--- a/app/views/system_configurations/show.html.erb
+++ b/app/views/system_configurations/show.html.erb
@@ -19,7 +19,7 @@
             <tbody class="divide-y divide-gray-200 bg-white">
               <tr>
                 <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6"><%= @system_configuration.alerting_quantity %></td>
-                <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6"><%=l @system_configuration.send_report_at, format: :hours_mins %></td>
+                <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6"><%=l @system_configuration.send_report_at, format: :hours_mins if @system_configuration.send_report_at %></td>
                 <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">
                   <% @system_configuration.report_recipients.each do |recipient| %>
                     <%= recipient %><br>
