--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -25,7 +25,7 @@
                   <td> <%= l sale.created_at, format: :datetime %> </td>
                   <td> <%= sale.flavor.name %> </td>
                   <td> <%= sale.location.name %> </td>
-                  <td> <%= sale.quantity %> </td>
+                  <td class="<%= sale.alerting_sale?(@system_configuration) ? 'bg-red-500' : '' %>"> <%= sale.quantity %> </td>
                   <td>
                     <%= link_to "Destroy this record", sale_path(sale), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "rounded-lg py-1 ml-2 px-2 bg-gray-100" %>
                   </td>
